# table_extract

./: CMakeLists.txt  README.md  Seal_extract.py  main.cpp
